--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
   <!-- Materialize CSS-->
@@ -59,23 +59,25 @@
   <section id="about" class="section scrollspy">
     <h3 class="page-title teal">About</h3>
     <div class="container">
-      <p>"Nothing Is Everything!"
-
-        I am a Computer Vision and Embedded Systems Engineer with a diverse set of interests and a passion for
-        continuous learning and innovation. My hands-on experience with companies like Valeo, Siemens, Si-Vision, and
-        Schneider has shaped my expertise in developing practical and impactful technology solutions.
-
-        In addition to my technical work, I serve as the Deputy of the Egyptian Youth Parliament (2021-2024), gaining
-        valuable experience in leadership and community engagement, and I am proud to support social change as a
-        Coordinator for the Hiah Karima Initiative.
-
-        I am driven by the vision of making technology more accessible and beneficial for everyone, and I am now seeking
-        a challenging role where I can contribute to progress and success within a forward-thinking organization.</p>
+      <p>"Nothing Is Everything!"</p>
+      <p>
+        I am a Computer Vision and Embedded Systems Engineer with a diverse range of interests and a passion for
+        continuous learning and innovation. My hands-on experience at companies like Valeo, Siemens, Si-Vision, and
+        Schneider has shaped my expertise in developing impactful technology solutions.
+      </p>
+      <p>
+        Beyond technical skills, I have gained valuable leadership and community engagement experience as the Deputy of
+        the Egyptian Youth Parliament (2021-2024) and as a Coordinator for the Hiah Karima Initiative.
+      </p>
+      <p>
+        I am driven by the vision of making technology accessible and beneficial to all and am seeking a challenging
+        role where I can contribute meaningfully within a forward-thinking organization.
+      </p>
       <ul>
         <li><b>Languages:</b> C, C++, Python, MATLAB, Assembly, Java</li>
         <li><b>Databases:</b> MySQL</li>
         <li><b>Libraries:</b> OpenCV, TensorFlow, Keras, PyTorch, scikit-learn</li>
-        <li><b>Frameworks:</b> astAPI, FreeRTOS, AUTOSAR</li>
+        <li><b>Frameworks:</b> FastAPI, FreeRTOS, AUTOSAR</li>
         <li><b>Tools & Technologies:</b> Docker, Git, Jupyter Notebook, LabVIEW, Arduino, Raspberry Pi, PCB Design</li>
       </ul>
     </div>
@@ -90,8 +92,8 @@
           <span class="card-title teal-text">Valeo Techie Degree Trainee</span>
           <p class="brown-text">Trainee in Software Testing and Embedded Systems</p>
           <ul>
-            <li>Gained expertise in C protocols, RTOS, and AUTOSAR.</li>
-            <li>Hands-on with automotive bus systems, including CAN and LIN.</li>
+            <li>Developed expertise in C protocols, RTOS, and AUTOSAR.</li>
+            <li>Hands-on experience with automotive bus systems, including CAN and LIN.</li>
           </ul>
         </div>
         <div class="card-action">
@@ -111,7 +113,7 @@
             <div class="card-image"><img src="assets/img/parking_project.jpg" alt="Parking Spot Detection"></div>
             <div class="card-content">
               <span class="card-title teal-text">Parking Spot Detection</span>
-              <p>Computer vision system to detect and count parking spots.</p>
+              <p>Developed a computer vision system to detect and count available parking spots.</p>
             </div>
             <div class="card-action"><a
                 href="https://github.com/Esmtra/Parking-Spot-detection-and-counter-CV">GitHub</a></div>
@@ -162,7 +164,7 @@
   </section>
 
   <!-- Typed.js Animation -->
-  <script src="assets/vendor/typed.js/typed.min.js"></script>
+  <script src="assets/vendor/typed.min.js"></script>
   <script>
     var typed = new Typed('.typing', {
       strings: ["Computer Vision Engineer", "Embedded Systems Specialist", "Machine Learning Enthusiast"],
