--- a/index.html
+++ b/index.html
@@ -54,6 +54,16 @@
       </div>
     </div>
   </section>
+  <section id="intro" class="section scrollspy full-height">
+    <div class="container">
+      <div class="content">
+        <h2>Hi, I'm <span class="teal">Eslam Mtrawy.</span></h2>
+        <h5 id="typed-output"></h5> <!-- This is where the typing effect will appear -->
+        <p>Innovative engineer focused on machine learning, computer vision, and embedded systems.</p>
+        <!-- Social and Buttons here -->
+      </div>
+    </div>
+  </section>
 
   <!-- About Section -->
   <section id="about" class="section scrollspy">
@@ -183,6 +193,8 @@
       $(".button-collapse").sideNav();
     });
   </script>
+  <script src="assets/vendor/typed.min.js"></script>
+
 </body>
 
 </html>
