--- a/index.html
+++ b/index.html
@@ -20,10 +20,9 @@
 </head>
 
 <body>
-
-  <!-- Navigation -->
-  <nav class="hide-on-small-only">
-    <ul class="side-nav fixed section table-of-contents">
+<div class="flex">
+  <aside class="hide-on-small-only width ">
+    <ul class="side-nav fixed padding section table-of-contents">
       <li class="logo">
         <a href="#intro" class="brand-logo"><img src="assets/img/profile.jpg" class="circle responsive-img profile-pic"
             alt="Eslam Mtrawy"></a>
@@ -35,10 +34,11 @@
       <li class="bold"><a href="#education" class="waves-effect teal-text">Education</a></li>
       <li class="bold"><a href="#contact" class="waves-effect teal-text">Contact</a></li>
     </ul>
-  </nav>
+  </aside>
 
-  <!-- Intro Section -->
-  <section id="intro" class="section scrollspy full-height">
+ <section>
+   <!-- Intro Section -->
+   <section id="intro" class="section scrollspy full-height">
     <div class="container">
       <div class="content">
         <h2>Hi, I'm <span class="teal">Eslam Mtrawy.</span></h2>
@@ -172,6 +172,10 @@
           target="_blank">linkedin.com/in/eslam-mtrawy</a></p>
     </div>
   </section>
+ </section>
+</div>
+  <!-- Navigation -->
+
 
   <!-- Typed.js Animation -->
   <script src="assets/vendor/typed.min.js"></script>
