--- a/index.html
+++ b/index.html
@@ -20,160 +20,162 @@
 </head>
 
 <body>
-<div class="flex">
-  <aside class="hide-on-small-only width ">
-    <ul class="side-nav fixed padding section table-of-contents">
-      <li class="logo">
-        <a href="#intro" class="brand-logo"><img src="assets/img/profile.jpg" class="circle responsive-img profile-pic"
-            alt="Eslam Mtrawy"></a>
-      </li>
-      <li class="bold"><a href="#about" class="waves-effect teal-text">About</a></li>
-      <li class="bold"><a href="#experience" class="waves-effect teal-text">Experience</a></li>
-      <li class="bold"><a href="#projects" class="waves-effect teal-text">Projects</a></li>
-      <li class="bold"><a href="#skills" class="waves-effect teal-text">Skills</a></li>
-      <li class="bold"><a href="#education" class="waves-effect teal-text">Education</a></li>
-      <li class="bold"><a href="#contact" class="waves-effect teal-text">Contact</a></li>
-    </ul>
-  </aside>
-
- <section>
-   <!-- Intro Section -->
-   <section id="intro" class="section scrollspy full-height">
-    <div class="container">
-      <div class="content">
-        <h2>Hi, I'm <span class="teal">Eslam Mtrawy.</span></h2>
-        <h5>A <span class="typing" style="color:#00334d">Computer Vision Engineer</span></h5>
-        <p>Innovative engineer focused on machine learning, computer vision, and embedded systems.</p>
-        <div class="social">
-          <a href="https://www.linkedin.com/in/eslam-mtrawy-1714201b7/" target="_blank"><i
-              class="fa fa-linkedin"></i></a>
-          <a href="https://github.com/Esmtra" target="_blank"><i class="fa fa-github"></i></a>
-        </div>
-        <a href="#about" class="readme">Read More</a>
-        <a href="#contact" class="contactme">Contact Me</a>
-      </div>
-    </div>
-  </section>
-  <section id="intro" class="section scrollspy full-height">
-    <div class="container">
-      <div class="content">
-        <h2>Hi, I'm <span class="teal">Eslam Mtrawy.</span></h2>
-        <h5 id="typed-output"></h5> <!-- This is where the typing effect will appear -->
-        <p>Innovative engineer focused on machine learning, computer vision, and embedded systems.</p>
-        <!-- Social and Buttons here -->
-      </div>
-    </div>
-  </section>
-
-  <!-- About Section -->
-  <section id="about" class="section scrollspy">
-    <h3 class="page-title teal">About</h3>
-    <div class="container">
-      <p>"Nothing Is Everything!"</p>
-      <p>
-        I am a Computer Vision and Embedded Systems Engineer with a diverse range of interests and a passion for
-        continuous learning and innovation. My hands-on experience at companies like Valeo, Siemens, Si-Vision, and
-        Schneider has shaped my expertise in developing impactful technology solutions.
-      </p>
-      <p>
-        Beyond technical skills, I have gained valuable leadership and community engagement experience as the Deputy of
-        the Egyptian Youth Parliament (2021-2024) and as a Coordinator for the Hiah Karima Initiative.
-      </p>
-      <p>
-        I am driven by the vision of making technology accessible and beneficial to all and am seeking a challenging
-        role where I can contribute meaningfully within a forward-thinking organization.
-      </p>
-      <ul>
-        <li><b>Languages:</b> C, C++, Python, MATLAB, Assembly, Java</li>
-        <li><b>Databases:</b> MySQL</li>
-        <li><b>Libraries:</b> OpenCV, TensorFlow, Keras, PyTorch, scikit-learn</li>
-        <li><b>Frameworks:</b> FastAPI, FreeRTOS, AUTOSAR</li>
-        <li><b>Tools & Technologies:</b> Docker, Git, Jupyter Notebook, LabVIEW, Arduino, Raspberry Pi, PCB Design</li>
+  <div class="flex">
+    <aside class="hide-on-small-only width ">
+      <ul class="side-nav fixed padding section table-of-contents">
+        <li class="logo">
+          <a href="#intro" class="brand-logo"><img src="assets/img/profile.jpg"
+              class="circle responsive-img profile-pic" alt="Eslam Mtrawy"></a>
+        </li>
+        <li class="bold"><a href="#about" class="waves-effect teal-text">About</a></li>
+        <li class="bold"><a href="#experience" class="waves-effect teal-text">Experience</a></li>
+        <li class="bold"><a href="#projects" class="waves-effect teal-text">Projects</a></li>
+        <li class="bold"><a href="#skills" class="waves-effect teal-text">Skills</a></li>
+        <li class="bold"><a href="#education" class="waves-effect teal-text">Education</a></li>
+        <li class="bold"><a href="#contact" class="waves-effect teal-text">Contact</a></li>
       </ul>
-    </div>
-  </section>
+    </aside>
 
-  <!-- Experience Section -->
-  <section id="experience" class="section scrollspy">
-    <h3 class="page-title teal">Experience</h3>
-    <div class="container">
-      <div class="card">
-        <div class="card-content">
-          <span class="card-title teal-text">Valeo Techie Degree Trainee</span>
-          <p class="brown-text">Trainee in Software Testing and Embedded Systems</p>
-          <ul>
-            <li>Developed expertise in C protocols, RTOS, and AUTOSAR.</li>
-            <li>Hands-on experience with automotive bus systems, including CAN and LIN.</li>
-          </ul>
-        </div>
-        <div class="card-action">
-          <span>Feb 2023 - Apr 2023 | Cairo, Egypt</span>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Projects Section -->
-  <section id="projects" class="section scrollspy">
-    <h3 class="page-title teal">Projects</h3>
-    <div class="container">
-      <div class="row">
-        <div class="col s12 m6">
-          <div class="card">
-            <div class="card-image"><img src="assets/img/parking_project.jpg" alt="Parking Spot Detection"></div>
-            <div class="card-content">
-              <span class="card-title teal-text">Parking Spot Detection</span>
-              <p>Developed a computer vision system to detect and count available parking spots.</p>
+    <section>
+      <!-- Intro Section -->
+      <section id="intro" class="section scrollspy full-height">
+        <div class="container">
+          <div class="content">
+            <h2>Hi, I'm <span class="teal">Eslam Mtrawy.</span></h2>
+            <h5>A <span class="typing" style="color:#00334d">Computer Vision Engineer</span></h5>
+            <p>Innovative engineer focused on machine learning, computer vision, and embedded systems.</p>
+            <div class="social">
+              <a href="https://www.linkedin.com/in/eslam-mtrawy-1714201b7/" target="_blank"><i
+                  class="fa fa-linkedin"></i></a>
+              <a href="https://github.com/Esmtra" target="_blank"><i class="fa fa-github"></i></a>
             </div>
-            <div class="card-action"><a
-                href="https://github.com/Esmtra/Parking-Spot-detection-and-counter-CV">GitHub</a></div>
+            <a href="#about" class="readme">Read More</a>
+            <a href="#contact" class="contactme">Contact Me</a>
           </div>
         </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Skills Section -->
-  <section id="skills" class="section scrollspy">
-    <h3 class="page-title teal">Skills</h3>
-    <div class="container">
-      <h4 class="brown-text">Libraries</h4>
-      <ul>
-        <li>OpenCV, TensorFlow, PyTorch, NumPy, Pandas</li>
-      </ul>
-      <h4 class="brown-text">Frameworks</h4>
-      <ul>
-        <li>FastAPI, Bootstrap, Flask</li>
-      </ul>
-    </div>
-  </section>
-
-  <!-- Education Section -->
-  <section id="education" class="section scrollspy">
-    <h3 class="page-title teal">Education</h3>
-    <div class="container">
-      <div class="card">
-        <div class="card-content">
-          <span class="card-title teal-text">Ain Shams University</span>
-          <p>Bachelor of Science in Mechatronics and Robotics Engineering</p>
-          <p>Graduation Project: Hybrid Driver Monitoring System</p>
+      </section>
+      <section id="intro" class="section scrollspy full-height">
+        <div class="container">
+          <div class="content">
+            <h2>Hi, I'm <span class="teal">Eslam Mtrawy.</span></h2>
+            <h5 id="typed-output"></h5> <!-- This is where the typing effect will appear -->
+            <p>Innovative engineer focused on machine learning, computer vision, and embedded systems.</p>
+            <!-- Social and Buttons here -->
+          </div>
         </div>
-      </div>
-    </div>
-  </section>
+      </section>
 
-  <!-- Contact Section -->
-  <section id="contact" class="section scrollspy">
-    <h3 class="page-title teal">Contact</h3>
-    <div class="container">
-      <p>Email: <a href="mailto:eselmtrawy@gmail.com">eselmtrawy@gmail.com</a></p>
-      <p>GitHub: <a href="https://github.com/Esmtra" target="_blank">github.com/Esmtra</a></p>
-      <p>LinkedIn: <a href="https://www.linkedin.com/in/eslam-mtrawy-1714201b7/"
-          target="_blank">linkedin.com/in/eslam-mtrawy</a></p>
-    </div>
-  </section>
- </section>
-</div>
+      <!-- About Section -->
+      <section id="about" class="section scrollspy">
+        <h3 class="page-title teal">About</h3>
+        <div class="container">
+          <p>"Nothing Is Everything!"</p>
+          <p>
+            I am a Computer Vision and Embedded Systems Engineer with a diverse range of interests and a passion for
+            continuous learning and innovation. My hands-on experience at companies like Valeo, Siemens, Si-Vision, and
+            Schneider has shaped my expertise in developing impactful technology solutions.
+          </p>
+          <p>
+            Beyond technical skills, I have gained valuable leadership and community engagement experience as the Deputy
+            of
+            the Egyptian Youth Parliament (2021-2024) and as a Coordinator for the Hiah Karima Initiative.
+          </p>
+          <p>
+            I am driven by the vision of making technology accessible and beneficial to all and am seeking a challenging
+            role where I can contribute meaningfully within a forward-thinking organization.
+          </p>
+          <ul>
+            <li><b>Languages:</b> C, C++, Python, MATLAB, Assembly, Java</li>
+            <li><b>Databases:</b> MySQL</li>
+            <li><b>Libraries:</b> OpenCV, TensorFlow, Keras, PyTorch, scikit-learn</li>
+            <li><b>Frameworks:</b> FastAPI, FreeRTOS, AUTOSAR</li>
+            <li><b>Tools & Technologies:</b> Docker, Git, Jupyter Notebook, LabVIEW, Arduino, Raspberry Pi, PCB Design
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <!-- Experience Section -->
+      <section id="experience" class="section scrollspy">
+        <h3 class="page-title teal">Experience</h3>
+        <div class="container">
+          <div class="card">
+            <div class="card-content">
+              <span class="card-title teal-text">Valeo Techie Degree Trainee</span>
+              <p class="brown-text">Trainee in Software Testing and Embedded Systems</p>
+              <ul>
+                <li>Developed expertise in C protocols, RTOS, and AUTOSAR.</li>
+                <li>Hands-on experience with automotive bus systems, including CAN and LIN.</li>
+              </ul>
+            </div>
+            <div class="card-action">
+              <span>Feb 2023 - Apr 2023 | Cairo, Egypt</span>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Projects Section -->
+      <section id="projects" class="section scrollspy">
+        <h3 class="page-title teal">Projects</h3>
+        <div class="container">
+          <div class="row">
+            <div class="col s12 m6">
+              <div class="card">
+                <div class="card-image"><img src="assets/img/parking_project.jpg" alt="Parking Spot Detection"></div>
+                <div class="card-content">
+                  <span class="card-title teal-text">Parking Spot Detection</span>
+                  <p>Developed a computer vision system to detect and count available parking spots.</p>
+                </div>
+                <div class="card-action"><a
+                    href="https://github.com/Esmtra/Parking-Spot-detection-and-counter-CV">GitHub</a></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Skills Section -->
+      <section id="skills" class="section scrollspy">
+        <h3 class="page-title teal">Skills</h3>
+        <div class="container">
+          <h4 class="brown-text">Libraries</h4>
+          <ul>
+            <li>OpenCV, TensorFlow, PyTorch, NumPy, Pandas</li>
+          </ul>
+          <h4 class="brown-text">Frameworks</h4>
+          <ul>
+            <li>FastAPI, Bootstrap, Flask</li>
+          </ul>
+        </div>
+      </section>
+
+      <!-- Education Section -->
+      <section id="education" class="section scrollspy">
+        <h3 class="page-title teal">Education</h3>
+        <div class="container">
+          <div class="card">
+            <div class="card-content">
+              <span class="card-title teal-text">Ain Shams University</span>
+              <p>Bachelor of Science in Mechatronics and Robotics Engineering</p>
+              <p>Graduation Project: Hybrid Driver Monitoring System</p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Contact Section -->
+      <section id="contact" class="section scrollspy">
+        <h3 class="page-title teal">Contact</h3>
+        <div class="container">
+          <p>Email: <a href="mailto:eselmtrawy@gmail.com">eselmtrawy@gmail.com</a></p>
+          <p>GitHub: <a href="https://github.com/Esmtra" target="_blank">github.com/Esmtra</a></p>
+          <p>LinkedIn: <a href="https://www.linkedin.com/in/eslam-mtrawy-1714201b7/"
+              target="_blank">linkedin.com/in/eslam-mtrawy</a></p>
+        </div>
+      </section>
+    </section>
+  </div>
   <!-- Navigation -->
 
 
